--- a/src/app/componets/single-product/single-product.component.html
+++ b/src/app/componets/single-product/single-product.component.html
@@ -18,7 +18,6 @@
         <input matInput
                placeholder="Description"
                formControlName="description"
-               [(ngModel)]="product.description"
                [matAutocomplete]="autoCompleteForDescription"
                required>
         <mat-error *ngIf="singleProductForm.controls['description'].hasError('required')">
@@ -40,7 +39,6 @@
         <input matInput
                placeholder="HSN"
                formControlName="hsnCode"
-               [(ngModel)]="product.hsnCode"
                required>
         <mat-error *ngIf="singleProductForm.controls['hsnCode'].hasError('required')">
           HSN is <strong>required</strong>
@@ -55,7 +53,6 @@
                type="number"
                min="0"
                formControlName="quantity"
-               [(ngModel)]="product.quantity"
                required>
         <mat-error *ngIf="singleProductForm.controls['quantity'].hasError('required')">
           Quantity is <strong>required</strong>
@@ -67,7 +64,6 @@
       <mat-form-field>
         <mat-select placeholder="GST Percentage"
                     formControlName="taxPercentage"
-                    [(ngModel)]="product.taxPercentage"
                     required>
           <mat-option *ngFor="let gstPercentage of taxPercentages"
                       [value]="gstPercentage">
@@ -84,7 +80,6 @@
       <mat-form-field>
         <mat-select placeholder="Per Value"
                     formControlName="perValue"
-                    [(ngModel)]="product.perValue"
                     required>
           <mat-option *ngFor="let perValue of perValues"
                       [value]="perValue">
@@ -104,7 +99,6 @@
                type="number"
                min="0"
                formControlName="rate"
-               [(ngModel)]="product.rate"
                required>
         <mat-error *ngIf="singleProductForm.controls['rate'].hasError('required')">
           Rate is <strong>required</strong>
@@ -120,8 +114,7 @@
                type="number"
                min="0"
                max="100"
-               formControlName="discount"
-               [(ngModel)]="product.discount">
+               formControlName="discount">
         <span matSuffix>%&nbsp;</span>
       </mat-form-field>
       <!-- #endregion -->
@@ -142,7 +135,6 @@
       <!-- #endregion -->
       <!-- #region Form Field: CheckBox -->
       <mat-checkbox formControlName="checkBox"
-                    [(ngModel)]="product.isSelected"
                     (change)="clickOfCheckBox.emit()">
       </mat-checkbox>
       <!-- #endregion -->
