--- a/src/app/componets/app-main-nav/app-main-nav.component.html
+++ b/src/app/componets/app-main-nav/app-main-nav.component.html
@@ -1,21 +1,29 @@
-<mat-toolbar color="primary"
+<mat-toolbar *ngIf="isLoggedIn"
+             color="primary"
              class="fixed-header">
   <mat-toolbar-row>
-    <span>
-      <mat-icon>home</mat-icon>
-    </span>
-    <a mat-button
-       routerLink="/view-bill"
-       routerLinkActive="active-link">View Bill</a>
-    <a mat-button
-       routerLink="/customer-panel"
-       routerLinkActive="active-link">Customer Panel</a>
-    <a mat-button
-       routerLink="/user-panel"
-       routerLinkActive="active-link">User Panel</a>
-    <a mat-button
-       routerLink="/new-bill"
-       routerLinkActive="active-link">New Bill</a>
-
+    <div class="mr-auto">
+      <span>
+        <mat-icon>home</mat-icon>
+      </span>
+      <a mat-button
+         routerLink="/view-bill"
+         routerLinkActive="active-link">View Bill</a>
+      <a mat-button
+         routerLink="/customer-panel"
+         routerLinkActive="active-link">Customer Panel</a>
+      <a mat-button
+         routerLink="/user-panel"
+         routerLinkActive="active-link">User Panel</a>
+      <a mat-button
+         routerLink="/new-bill"
+         routerLinkActive="active-link">New Bill</a>
+    </div>
+    <div class="ml-auto">
+      <a mat-button
+         routerLink="/login"
+         routerLinkActive="active-link"
+         (click)="logout()">Log Out</a>
+    </div>
   </mat-toolbar-row>
 </mat-toolbar>
